add ep to get position of a menu by id
